--- a/Assignment 1/Makefile
+++ b/Assignment 1/Makefile
@@ -3,7 +3,7 @@ LIBPATH += -L"/System/Library/Frameworks/OpenGL.framework/Libraries"
 FRAMEWORK += -framework GLUT
 FRAMEWORK += -framework OpenGL 
 
-COMPILERFLAGS = -Wall 
+COMPILERFLAGS = -Wall -Werror
 CC = clang 
 CFLAGS = $(COMPILERFLAGS) 
 LIBRARIES = -lGL -lGLU -lm -lobjc -lstdc++ 
@@ -12,5 +12,5 @@ INCLUDES += "-I/System/Library/Frameworks/OpenGL.framework/Headers"
 INCLUDES += "-I/System/Library/Frameworks/GLUT.framework/Headers"
 INCLUDES += "-I."
 
-assignment1: main.cxx OpenGlDisplay.cxx Image.cxx RgbImage.cpp
-	clang -o assignment1 main.cxx OpenGlDisplay.cxx Image.cxx RgbImage.cpp $(COMPILERFLAGS) $(LIBRARIES) $(FRAMEWORK) $(LIBPATH) $(INCLUDES)
+assignment1: main.cxx OpenGlDisplay.cxx Image.cxx ImageRenderer.cxx RgbImage.cpp
+	clang -o assignment1 main.cxx OpenGlDisplay.cxx Image.cxx ImageRenderer.cxx RgbImage.cpp $(COMPILERFLAGS) $(LIBRARIES) $(FRAMEWORK) $(LIBPATH) $(INCLUDES)
