Added virtual trackball (more or less)

--- a/Assignment 2/Makefile
+++ b/Assignment 2/Makefile
@@ -50,7 +50,7 @@ INCLUDES += "-I/Library/Frameworks/QtOpenGL.framework/Versions/4/Headers/"
 INCLUDES += "-I."
 
 # Actually compile the assignment
-assignment1 : *.cxx *.cpp OpenGlCore.moc.cxx AssignmentCore.moc.cxx Sidebar.moc.cxx ModelRenderer.moc.cxx SidebarUi.ui.h ModelManager.moc.cxx
+assignment1 : *.cxx *.cpp OpenGlCore.moc.cxx AssignmentCore.moc.cxx Sidebar.moc.cxx ModelRenderer.moc.cxx SidebarUi.ui.h ModelManager.moc.cxx SliderSpinboxController.moc.cxx
 	$(CC) -o assignment2 *.cxx *.cpp $(COMPILERFLAGS) $(LIBRARIES) $(FRAMEWORK) $(LIBPATH) $(INCLUDES)
 
 # Run the QT Moc
@@ -68,6 +68,9 @@ ModelRenderer.moc.cxx : ModelRenderer.h
 
 ModelManager.moc.cxx : ModelManager.h
 	moc ModelManager.h -o ModelManager.moc.cxx
+
+SliderSpinboxController.moc.cxx : SliderSpinboxController.h
+	moc SliderSpinboxController.h -o SliderSpinboxController.moc.cxx
 
 SidebarUi.ui.h : SidebarUi.ui
 	uic SidebarUi.ui -o SidebarUi.ui.h
